<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/button_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/background">

    <Space  android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/my_border"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/expr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=""
            android:textSize="@dimen/key_text_size"
            android:gravity="right"
            android:textAlignment="gravity"
            android:padding="5dp"
            />
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=""
            android:textSize="@dimen/key_text_size"
            android:gravity="right"
            android:textAlignment="gravity"
            android:padding="5dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clear"
            android:text="@string/button_clear"
            style="@style/Button"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_back"
            android:text="@string/button_back"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_proc"
            android:text="@string/button_proc"
            style="@style/Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_div"
            android:text="@string/button_div"
            style="@style/Button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:text="@string/button1"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:text="@string/button2"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:text="@string/button3"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mult"
            android:text="@string/button_mult"
            style="@style/Button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:text="@string/button4"
            style="@style/Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:text="@string/button5"
            style="@style/Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:text="@string/button6"
            style="@style/Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:text="@string/button_minus"
            style="@style/Button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:text="@string/button7"
            style="@style/Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:text="@string/button8"
            style="@style/Button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:text="@string/button9"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:text="@string/button_plus"
            style="@style/Button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:text="@string/button0"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPt"
            android:text="@string/buttonPt"
            style="@style/Button"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equal"
            android:layout_width="6dp"
            android:layout_weight="2"
            android:text="@string/button_equal"
            style="@style/Button"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_margin="3dp"
        />

    <Space  android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="match_parent" />

</LinearLayout>