<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_columnSpan="3">
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button3" />

    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button6" />

    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button9" />

    </TableRow>
    <TableRow
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/button0"
            android:layout_span="2"/>

        <Button
            android:id="@+id/buttonPt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/key_text_size"
            android:text="@string/buttonPt" />
    </TableRow>
</TableLayout>
